tests/NormalTests/paczka1/fuzzy1/39514638.err
Error in line 10: YNCG A427 65,2
Error in line 20: vUE9f A427 1,7
Error in line 22: YZqzr6yH A322 49,0
Error in line 29: vUE9f A969 29,8
Error in line 32: w6DW A427 0,3
